# futu-opend-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-07-10-futu-opend-mcp.md
docs/superpowers/specs/: 2026-07-10-futu-opend-mcp-design.md
scripts/: sync_skill.sh
src/futu_opend_mcp/: config.py  connection.py  server.py  skill_runner.py
src/futu_opend_mcp/tools/: __init__.py  _base.py  capital.py  corporate_actions.py  derivatives.py  diagnostics.py  dividends.py  financials.py  industrial_chains.py  institutions.py  ipo.py  macro.py  options.py  plates.py  profile.py  quote.py  research.py  search.py  shareholders.py  short.py
tests/: conftest.py  test_config.py  test_connection.py  test_integration.py  test_server_smoke.py  test_skill_runner.py  test_tools_merge.py  test_tools_quote.py  test_tools_search_financials.py
